@@ -262,7 +262,7 @@ module ActiveRecord #:nodoc:
   class Base
     # Accepts a logger conforming to the interface of Log4r or the default Ruby 1.8+ Logger class, which is then passed
     # on to any new database connections made and which can be retrieved on both a class and instance level by calling +logger+.
-    cattr_accessor :logger
+    cattr_accessor :logger, :instance_writer => false
     
     include Reloadable::Deprecated
     
@@ -288,54 +288,54 @@ module ActiveRecord #:nodoc:
 
     @@subclasses = {}
 
-    cattr_accessor :configurations
+    cattr_accessor :configurations, :instance_writer => false
     @@configurations = {}
 
     # Accessor for the prefix type that will be prepended to every primary key column name. The options are :table_name and
     # :table_name_with_underscore. If the first is specified, the Product class will look for "productid" instead of "id" as
     # the primary column. If the latter is specified, the Product class will look for "product_id" instead of "id". Remember
     # that this is a global setting for all Active Records.
-    cattr_accessor :primary_key_prefix_type
+    cattr_accessor :primary_key_prefix_type, :instance_writer => false
     @@primary_key_prefix_type = nil
 
     # Accessor for the name of the prefix string to prepend to every table name. So if set to "basecamp_", all
     # table names will be named like "basecamp_projects", "basecamp_people", etc. This is a convenient way of creating a namespace
     # for tables in a shared database. By default, the prefix is the empty string.
-    cattr_accessor :table_name_prefix
+    cattr_accessor :table_name_prefix, :instance_writer => false
     @@table_name_prefix = ""
 
     # Works like +table_name_prefix+, but appends instead of prepends (set to "_basecamp" gives "projects_basecamp",
     # "people_basecamp"). By default, the suffix is the empty string.
-    cattr_accessor :table_name_suffix
+    cattr_accessor :table_name_suffix, :instance_writer => false
     @@table_name_suffix = ""
 
     # Indicates whether or not table names should be the pluralized versions of the corresponding class names.
     # If true, the default table name for a +Product+ class will be +products+. If false, it would just be +product+.
     # See table_name for the full rules on table/class naming. This is true, by default.
-    cattr_accessor :pluralize_table_names
+    cattr_accessor :pluralize_table_names, :instance_writer => false
     @@pluralize_table_names = true
 
     # Determines whether or not to use ANSI codes to colorize the logging statements committed by the connection adapter. These colors
     # make it much easier to overview things during debugging (when used through a reader like +tail+ and on a black background), but
     # may complicate matters if you use software like syslog. This is true, by default.
-    cattr_accessor :colorize_logging
+    cattr_accessor :colorize_logging, :instance_writer => false
     @@colorize_logging = true
 
     # Determines whether to use Time.local (using :local) or Time.utc (using :utc) when pulling dates and times from the database.
     # This is set to :local by default.
-    cattr_accessor :default_timezone
+    cattr_accessor :default_timezone, :instance_writer => false
     @@default_timezone = :local
 
     # Determines whether or not to use a connection for each thread, or a single shared connection for all threads.
     # Defaults to false. Set to true if you're writing a threaded application.
-    cattr_accessor :allow_concurrency
+    cattr_accessor :allow_concurrency, :instance_writer => false
     @@allow_concurrency = false
 
     # Determines whether to speed up access by generating optimized reader
     # methods to avoid expensive calls to method_missing when accessing
     # attributes by name. You might want to set this to false in development
     # mode, because the methods would be regenerated on each request.
-    cattr_accessor :generate_read_methods
+    cattr_accessor :generate_read_methods, :instance_writer => false
     @@generate_read_methods = true
     
     # Specifies the format to use when dumping the database schema with Rails'
@@ -344,7 +344,7 @@ module ActiveRecord #:nodoc:
     # ActiveRecord::Schema file which can be loaded into any database that
     # supports migrations.  Use :ruby if you want to have different database
     # adapters for, e.g., your development and test environments.
-    cattr_accessor :schema_format 
+    cattr_accessor :schema_format , :instance_writer => false
     @@schema_format = :ruby
 
     class << self # Class methods
